--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
         "path": "./themes/Scoopy-color-theme.json"
       }
     ]
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ArchitAnant/Scoopy-Purple"
   }
+  
 }
