--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "scoopy",
   "displayName": "Scoopy - Purple",
   "description": "",
+  "publisher": "ArchitAnant",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.87.0"
